--- a/index.html
+++ b/index.html
@@ -38,10 +38,14 @@
             border-color: var(--color4);
         }
         footer {
-            background-color: var(--color5);
+            background-color: var(--color4);
             padding-top: 20px;
             padding-bottom: 20px;
         }
+        .card {
+          border: 3px solid var(--color5);
+        }
+
     </style>
 </head>
 <body>
@@ -65,11 +69,12 @@
       </div>
     </nav>
     <!-- Saludo de bienvenida -->
+  <div id="fondo"> 
     <div class="container mt-5">
         <div class="row">
             <div class="col-md-12 text-center">
                 <h1>Bienvenido a HistAp</h1>
-                <p>La aplicación proporciona una solución eficaz y segura para la gestión de historias clínicas. Con ella, los usuarios pueden crear informes y remisiones, acceder al DSM y diversas entrevistas clínicas, así como verificar el efecto de los fármacos, todo de manera sencilla y accesible. Asimismo, la aplicación permite enviar pruebas psicotécnicas a los pacientes y recibir los resultados directamente en la plataforma. Con la automatización de tareas como la generación de RIPS y la elaboración del Staff, se ahorra tiempo valioso. Los usuarios también pueden recibir notificaciones de nuevos artículos publicados relacionados con la intervención psicológica, lo que les permite mantenerse actualizados. Por último, la aplicación les permite manejar bases de datos con información de sus pacientes y otros colegas que utilizan la plataforma para el desarrollo de investigaciones.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget enim vel odio bibendum interdum sit amet eu nulla. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget enim vel odio bibendum interdum sit amet eu nulla.</p>
             </div>
         </div>
     </div>
@@ -129,7 +134,7 @@
       </div>
     </div>
 </div>
-
+</div> 
 
     <footer class="text-center mt-5">
     <p>Número de contacto: +57 324 253 9220</p>
