--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <a class="nav-link" href="registrarse.html">Registrarse</a>
           </li>          
           <li class="nav-item">
-            <a class="btn btn-primary" href="#">Iniciar sesión</a>
+            <a class="btn btn-primary" href="iniciar.html">Iniciar sesión</a>
           </li>
         </ul>
       </div>
