--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             background-color: var(--color4);
             padding-top: 20px;
             padding-bottom: 20px;
+            color: white;
         }
         .card {
           border: 3px solid var(--color5);
