--- a/registrarse.html
+++ b/registrarse.html
@@ -48,10 +48,10 @@
       <h2 class="text-center" style="color:white;">HistAp</h2><br><br>
       <form action="/register" method="post">
         <div class="form-group">
-            <input type="password" class="form-control input-lg" placeholder="Nombre" required name='password'>
+            <input type="text" class="form-control input-lg" placeholder="Nombre" required name='password'>
         </div>  
         <div class="form-group">
-            <input type="password" class="form-control input-lg" placeholder="Apellidos" required name='password'>
+            <input type="text" class="form-control input-lg" placeholder="Apellidos" required name='password'>
         </div>
         <div class="form-group">
               <input type="email" class="form-control input-lg" placeholder="Correo institucional" required autofocus name='email'>
