--- a/home.html
+++ b/home.html
@@ -86,7 +86,7 @@
 
           <!-- Historias -->
 <div class= "col-md-2 col-sm-4 mb-3">
-    <button type= "button"class= "btn btn-primary btn-block">Historias</button>
+    <a href="historias.html" type= "button"class= "btn btn-primary btn-block">Historias</a>
 </div>
 
 <!-- Consentimientos -->
