--- a/historias.html
+++ b/historias.html
@@ -90,13 +90,25 @@
                 <a class="btn btn-primary" href="index.html">Buscar</a>
               </li>
               <li class="nav-item">
-                <a style="color: white;" class="nav-link" href="#">Identificación</a>
+                <a style="color: white;" class="nav-link" href="#identificacion">Identificación</a>
               </li>
               <li class="nav-item">
-                <a style="color: white;" class="nav-link" href="#">Antecedentes</a>
+                <a style="color: white;" class="nav-link" href="#antecedentes">Antecedentes</a>
               </li>
               <li class="nav-item">
-                <a style="color: white;" class="nav-link" href="#">Problemática</a>
+                <a style="color: white;" class="nav-link" href="#areas">Áreas</a>
+              </li>
+              <li class="nav-item">
+                <a style="color: white;" class="nav-link" href="#problematica">Problemática</a>
+              </li>
+              <li class="nav-item">
+                <a style="color: white;" class="nav-link" href="#intervencion">Intervención</a>
+              </li>
+              <li class="nav-item">
+                <a style="color: white;" class="nav-link" href="#medidas">Medidas de progreso</a>
+              </li>
+              <li class="nav-item">
+                <a style="color: white;" class="nav-link" href="#sesiones">Sesiones</a>
               </li>      
             <li class="nav-item">
   <a class="btn btn-primary" href="index.html">Guardar</a>
@@ -142,7 +154,7 @@
     </div>
   </section>
   <section class="container my-5">
-    <h2 class="text-center mb-3">Antecedentes</h2>
+    <h2 id="antecedentes" class="text-center mb-3">Antecedentes</h2>
     <div class="row">
       <div class="col-md-6">
         <div class="form-group">
@@ -167,11 +179,11 @@
     </div>
   </section>
   <section class="container my-5">
-    <h2 class="text-center mb-3">Problemática</h2>
+    <h2 id="areas" class="text-center mb-3">Áreas</h2>
     <div class="row">
       <div class="col-md-6">
         <div class="form-group">
-            <label for="nombre">Nombre</label>
+            <label for="nombre">Motivo de consulta</label>
             <textarea rows="1" class="form-control" id="nombre"></textarea>
           </div>
           <div class="form-group">
@@ -191,6 +203,57 @@
       </div>
     </div>
   </section>
+  <section class="container my-5">
+    <h2 id="problematica" class="text-center mb-3">Problemática</h2>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+            <label for="nombre">Motivo de consulta</label>
+            <textarea rows="1" class="form-control" id="nombre"></textarea>
+          </div>
+          <div class="form-group">
+            <label for="nombre">Nombre</label>
+            <textarea rows="1" class="form-control" id="nombre"></textarea>
+          </div>
+      </div>
+      <div class="col-md-6">
+        <div class="form-group">
+            <label for="nombre">Nombre</label>
+            <textarea rows="1" class="form-control" id="nombre"></textarea>
+          </div>
+          <div class="form-group">
+            <label for="nombre">Nombre</label>
+            <textarea rows="1" class="form-control" id="nombre"></textarea>
+          </div>
+      </div>
+    </div>
+  </section>
+  <section class="container my-5">
+    <h2 id="intervencion" class="text-center mb-3">Intervención</h2>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+            <label for="nombre">Motivo de consulta</label>
+            <textarea rows="1" class="form-control" id="nombre"></textarea>
+          </div>
+          <div class="form-group">
+            <label for="nombre">Nombre</label>
+            <textarea rows="1" class="form-control" id="nombre"></textarea>
+          </div>
+      </div>
+      <div class="col-md-6">
+        <div class="form-group">
+            <label for="nombre">Nombre</label>
+            <textarea rows="1" class="form-control" id="nombre"></textarea>
+          </div>
+          <div class="form-group">
+            <label for="nombre">Nombre</label>
+            <textarea rows="1" class="form-control" id="nombre"></textarea>
+          </div>
+      </div>
+    </div>
+  </section>
+  
   
 
 <footer class="mt-5 py-3">
