--- a/home.html
+++ b/home.html
@@ -64,10 +64,10 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Mi cuenta</a>
+              <a class="nav-link" href="index.html">Cerrar sesión</a>
             </li>          
             <li class="nav-item">
-              <a class="btn btn-primary" href="index.html">Cerrar sesión</a>
+              <a class="btn btn-primary" href="#">Mi cuenta</a>
             </li>
           </ul>
         </div>
@@ -121,7 +121,7 @@
 
 <!-- DSM -->
 <div class= "col-md-2 col-sm-4 mb-3">
-    <button type= "button"class= "btn btn-primary btn-block">DSM</button>
+    <a href="dsm.html" type="button"class= "btn btn-primary btn-block">DSM</a>
 </div>
 
 <!-- Medicamentos -->
