--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@
     </style>
 </head>
 <body class="bg-light">
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <a class="navbar-brand" href="#">
             <img src="https://cdn.pixabay.com/photo/2017/02/18/19/20/logo-2078018_640.png" width="30" height="30" class="d-inline-block align-top" alt="">
             HistAp
@@ -74,7 +74,7 @@
       </nav>
 
     <div class= "container text-center my-5">
-      <h1>Bienvenido<span> Juan Pablo</span></h1>
+      <h1><br>Bienvenido<span> Juan Pablo</span></h1>
       <h4>¿Qué quieres hacer hoy?</h4>
 
       <!-- Botones -->
@@ -86,7 +86,7 @@
 
           <!-- Historias -->
 <div class= "col-md-2 col-sm-4 mb-3">
-    <a href="historias.html" type= "button"class= "btn btn-primary btn-block">Historias</a>
+    <a href="historias.html" target="_blank" type= "button"class= "btn btn-primary btn-block">Historias</a>
 </div>
 
 <!-- Consentimientos -->
@@ -121,7 +121,7 @@
 
 <!-- DSM -->
 <div class= "col-md-2 col-sm-4 mb-3">
-    <a href="dsm.html" type="button"class= "btn btn-primary btn-block">DSM</a>
+    <a href="dsm.html" target="_blank" type="button"class= "btn btn-primary btn-block">DSM</a>
 </div>
 
 <!-- Medicamentos -->
