--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <a class="navbar-brand" href="#">
           <img src="https://cdn.pixabay.com/photo/2017/02/18/19/20/logo-2078018_640.png" width="30" height="30" class="d-inline-block align-top" alt="">
           HistAp
@@ -70,11 +70,10 @@
       </div>
     </nav>
     <!-- Saludo de bienvenida -->
-  <div id="fondo"> 
     <div class="container mt-5">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h1>Bienvenido a HistAp</h1>
+                <h1><br>Bienvenido a HistAp</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget enim vel odio bibendum interdum sit amet eu nulla. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget enim vel odio bibendum interdum sit amet eu nulla.</p>
             </div>
         </div>
