--- a/home.html
+++ b/home.html
@@ -106,7 +106,7 @@
 
 <!-- Técnicas -->
 <div class= "col-md-2 col-sm-4 mb-3">
-    <button type= "button"class= "btn btn-primary btn-block">Técnicas</button>
+    <a href="tecnicas.html" target="_blank" type="button"class= "btn btn-primary btn-block">Técnicas</a>
 </div>
 
 <!-- Entrevistas -->
@@ -144,9 +144,19 @@
     <button type= "button"class= "btn btn-primary btn-block">Base de datos</button>
 </div>
 
+<!-- Estadísticas -->
+<div class= "col-md-2 col-sm-4 mb-3">
+    <button type= "button"class= "btn btn-primary btn-block">Estadísticas</button>
+</div>
+
 <!-- Artículos -->
 <div class= "col-md-2 col-sm-4 mb-3">
     <button type= "button"class= "btn btn-primary btn-block">Artículos</button>
+</div>
+
+<!-- Chat -->
+<div class= "col-md-2 col-sm-4 mb-3">
+    <a href="proxichat.html" type= "button"class= "btn btn-primary btn-block">Chat</a>
 </div>
 </div>
 </div>
